--- a/GPSCatcher/res/layout/menu.xml
+++ b/GPSCatcher/res/layout/menu.xml
@@ -23,7 +23,13 @@
     android:layout_height="wrap_content"
     android:onClick="onChangeClick">
     </Button>
-    
+
+<Button android:text="@string/dbcheck" 
+    android:layout_width="wrap_content" 
+    android:layout_height="wrap_content"
+    android:onClick="onDBClick">
+    </Button>
+
 <Button android:text="@string/quit" 
     android:id="@+id/quit" 
     android:layout_width="wrap_content" 
