--- a/GPSCatcher/res/layout/main.xml
+++ b/GPSCatcher/res/layout/main.xml
@@ -8,14 +8,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="4">
 
         <TextView
             android:id="@+id/msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:paddingTop="0dp"
             android:text="@string/hello" 
-            android:layout_weight="1"/>
+            android:layout_weight="3"
+            android:minLines="4"/>
 
         <Button
             android:id="@+id/refresh"
@@ -23,10 +27,14 @@
             android:layout_height="wrap_content"
             android:text="@string/refresh" 
             android:onClick="onRefreshClick"
-            android:layout_weight="1"
-            android:padding="4dip"/>
+            android:layout_weight="1" 
+            android:minWidth="5dp"/>
 
     </LinearLayout>
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
 <com.google.android.maps.MapView
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -34,7 +42,28 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:clickable="true"
-    android:apiKey="0FpZ9lwtxH1-g8vHYaiRcfj6I15O0tbFRdN5fcQ"
-/>
+    android:apiKey="09FgNl8f_N12m-sB1R0zZETKHeB5S8b9MA-Txpw"/>
+
+    <Button
+        android:id="@+id/zoomToPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="14dp"
+        android:text="@string/phone"
+        android:onClick="onPhoneLocation" />
+
+    <Button
+        android:id="@+id/zoomToArd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="14dp"
+        android:text="@string/arduino"
+        android:onClick="onArdLocation" />
+      
+</RelativeLayout>
 
 </LinearLayout> 
