--- a/GPSCatcher/res/layout/celldbcheck.xml
+++ b/GPSCatcher/res/layout/celldbcheck.xml
@@ -3,10 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-<TextView android:layout_height="fill_parent" 
-    android:layout_width="fill_parent" 
-    android:id="@+id/celldb" >
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/celltitle"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#66FF33" >
     </TextView>
-    
+
+    <TextView
+        android:id="@+id/celldb"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="0.95" >
+    </TextView>
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/back" />
+
 </LinearLayout>
