--- a/GPSCatcher/res/layout/gpsdbcheck.xml
+++ b/GPSCatcher/res/layout/gpsdbcheck.xml
@@ -12,10 +12,13 @@
         android:textColor="#66FF33" >
     </TextView>
     
+<!-- http://stackoverflow.com/questions/1748977/making-textview-scrollable-in-android -->
 <TextView 
     android:layout_width="fill_parent" 
     android:layout_height="0dip"
     android:layout_weight="0.95"
+    android:maxLines = "25"
+	android:scrollbars = "vertical"
     android:id="@+id/gpsdb" >
     </TextView>
     
