--- a/GPSCatcher/res/layout/gpsdbcheck.xml
+++ b/GPSCatcher/res/layout/gpsdbcheck.xml
@@ -26,6 +26,7 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/back" />
+        android:text="@string/back"
+        android:onClick="onBackClick" />
     
 </LinearLayout>
